# DataKit

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/roadmap/: cryptography.md  encoding.md  formats.md  transformations.md
docs/security/: envelope-v1.md  threat-model.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format_detection.rs  jsonl_parse.rs
memory/: architecture.md  conventions.md  decisions.md  known_issues.md
src/: archive.rs  atomic.rs  base32.rs  base58.rs  base64.rs  base85.rs  check.rs  cli.rs  completions.rs  compress.rs  convert.rs  count.rs  decompress.rs  decrypt.rs  dedup.rs  diff.rs  encode.rs  encrypt.rs  entries.rs  error.rs  explode.rs  fill.rs  filter.rs  flatten.rs  group.rs  hash.rs  head.rs  hex.rs  inspect.rs  keygen.rs  keys.rs  length.rs  main.rs  merge.rs  normalize.rs  pick.rs  pipeline.rs  pretty.rs  query.rs  rename.rs  (+18 more)
src/format/: csv.rs  jsonl.rs  mod.rs  msgpack.rs  toml.rs  xml.rs  yaml.rs
tasks/: backlog.md  blocked.md  completed.md  current.md
tests/: cli_tests.rs  property_tests.rs
