[package]
name = "datakit"
version = "0.1.0"
edition = "2021"
description = "Command-line toolkit for inspecting, converting, validating, querying, transforming, and analyzing structured data"
authors = []
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
jsonschema = "0.40"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
