[package]
name = "datakit"
version = "0.1.0"
edition = "2021"
description = "Command-line toolkit for inspecting, converting, validating, querying, transforming, and analyzing structured data"
authors = []
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
jsonschema = "0.40"
md-5 = "0.10"
argon2 = "0.5"
blake3 = "1"
chacha20poly1305 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
zeroize = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
base32 = "0.5"
base64 = "0.22"
base85 = "1"
bs58 = "0.5"
hex = "0.4"
tempfile = "3"
rpassword = "7"
ed25519-dalek = "2"
flate2 = "1"
tar = "0.4"
thiserror = "2"
walkdir = "2"
zip = "2"
zstd = "0.13"
toml = "1.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
